# JVKEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DefaultUILayer.ini  main.cpp  save.xml  tt.lua
Assets/Levels/: Level1.xml  Level2.xml  Level3.xml  Map1.xml
Assets/Scripts/: Minus.lua  MyCharacterScript.lua  Plus.lua
Assets/Test/tga/: HYPERS.tga
EngineEditor/: CMakeLists.txt
EngineEditor/CMake/: CMakeLists_sources.cmake
EngineEditor/_scripts/: generate_cmake_sources.sh
EngineEditor/sources/: App.cpp  App.h  main.cpp
EngineEditor/sources/Components/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  ScriptComponent.cpp  ScriptComponent.h  SoundComponent.cpp  SoundComponent.h  StaticMesh.cpp  StaticMesh.h  Transform.cpp  Transform.h
EngineEditor/sources/Components/Lights/: DirectionalLight.cpp  DirectionalLight.h  LightComponent.cpp  LightComponent.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
EngineEditor/sources/ECS/: CommonTypes.h  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h  World.cpp  World.h
EngineEditor/sources/InputSystem/: DefineInput.h  InputManager.cpp  InputManager.h
EngineEditor/sources/Resources/: ComponentsDataManager.cpp  ComponentsDataManager.h  ResourcesManager.cpp  ResourcesManager.h  ScriptObject.h  TextureFactory.h  ThreadPool.cpp  ThreadPool.h  ThreadPool.inl
EngineEditor/sources/Scene/: Actor.cpp  Actor.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
EngineEditor/sources/Scripting/: CharacterScript.cpp  CharacterScript.h  ScriptObj.cpp  ScriptObj.h
EngineEditor/sources/Serialization/: Serializer.cpp  Serializer.h
EngineEditor/sources/StateMachine/: FSM.cpp  FSM.h  State.h
EngineEditor/sources/StateMachine/States/Engine/: StateEngine.cpp  StateEngine.h
EngineEditor/sources/StateMachine/States/Engine/Systems/: CameraControlSystem.cpp  CameraControlSystem.h
EngineEditor/sources/StateMachine/States/Play/: StatePlay.cpp  StatePlay.h
EngineEditor/sources/Systems/: CameraSystem.cpp  CameraSystem.h  LightSystem.cpp  LightSystem.h  PhysixSystem.cpp  PhysixSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptingSystem.cpp  ScriptingSystem.h  SoundSystem.cpp  SoundSystem.h  StaticMeshSystem.cpp  StaticMeshSystem.h  TransformSystem.cpp  TransformSystem.h
EngineEditor/sources/TestGameplay/: Bullet.cpp  Bullet.h  Bullet2.cpp  Bullet2.h  Button.cpp  Button.h  Capsule.cpp  Capsule.h  CustomActor.cpp  CustomActor.h  DeathBox.cpp  DeathBox.h  Floor.cpp  Floor.h  LvlManager.cpp  LvlManager.h  Mountain.cpp  Mountain.h  PickUpObject.cpp  PickUpObject.h  Platform.cpp  Platform.h  PlatformSpawner.cpp  PlatformSpawner.h  Portal.cpp  Portal.h  Portal2.cpp  Portal2.h  StaticBox.cpp  StaticBox.h  Trampoline.cpp  Trampoline.h  Trap.cpp  Trap.h
ToolsEngine/: CMakeLists.txt
ToolsEngine/CMake/: CMakeLists_sources_lib.cmake
ToolsEngine/_scripts/: generate_cmake_sources_lib.sh
ToolsEngine/sources/: Defines.h  ToolsEngine.cpp  ToolsEngine.h
libgfx/: CMakeLists.txt
libgfx/CMake/: CMakeLists_sources_lib.cmake  FindVulkan.cmake
libgfx/_scripts/: generate_cmake_sources_lib.sh
libgfx/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
libgfx/sources/: Buffers.cpp  Buffers.h  Common.cpp  Common.h  DescriptorBindFrag.h  DescriptorBindVert.h  Descriptors.cpp  Descriptors.h  GraphicAPI.h  GraphicApi.cpp  Image.cpp  Image.h  Initializers.hpp  LightManager.cpp  LightManager.h  Pipeline.cpp  Pipeline.h  RenderingManager.cpp  RenderingManager.h  Renderpass.cpp  Renderpass.h  Shader.h  SurfaceDescriptor.h  TextureSampler.h  VkDeleter.h
libgfx/sources/Core/: GFXAPI.cpp  GFXAPI.h  SwapChain.cpp  SwapChain.h
libgfx/sources/LowRenderer/: Camera.cpp  Camera.h  Light.cpp  Light.h
libgfx/sources/LowRenderer/Model/: Mesh.h  Model.cpp  Model.h  Vertex.h
libgfx/sources/Resources/: ActorComponentsData.cpp  ActorComponentsData.h  FileAsset.cpp  FileAsset.h  FolderAsset.cpp  FolderAsset.h  HashString.h  Resource.h  SavedData.cpp  SavedData.h  TextureLoader.cpp  TextureLoader.h  UITexture.cpp  UITexture.h
libgfx/sources/Resources/ActorComponentsDataForUI/: ActorCameraCompData.cpp  ActorCameraCompData.h  ActorLightCompData.cpp  ActorLightCompData.h  ActorPhysicCompData.cpp  ActorPhysicCompData.h  ActorScriptCompData.cpp  ActorScriptCompData.h  ActorSoundCompData.cpp  ActorSoundCompData.h  ActorStaticMeshCompData.cpp  ActorStaticMeshCompData.h  ActorTransformCompData.cpp  ActorTransformCompData.h
libgfx/sources/UI/: UIWidgetButton.cpp  UIWidgetButton.h  UIWidgetImage.cpp  UIWidgetImage.h  UIWidgetText.cpp  UIWidgetText.h  UIWidgets.cpp  UIWidgets.h  UIWindow.cpp  UIWindow.h  UIWindowManager.cpp  UIWindowManager.h
libgfx/sources/UI/UIWindows/: UIWindowBuild.cpp  UIWindowBuild.h  UIWindowComponents.cpp  UIWindowComponents.h  UIWindowFIleBrowser.cpp  UIWindowFIleBrowser.h  UIWindowMainToolBar.cpp  UIWindowMainToolBar.h  UIWindowUIInGamePreview.cpp  UIWindowUIInGamePreview.h  UIWindowViewportScene.cpp  UIWindowViewportScene.h  UIWindowWorldHierarchy.cpp  UIWindowWorldHierarchy.h
libgfx/sources/Window/: Window.cpp  Window.h
libsound/: CMakeLists.txt
libsound/CMake/: CMakeLists_sources_lib.cmake
libsound/_scripts/: generate_cmake_sources_lib.sh
libsound/sources/: Sound.h  Sound3D.cpp  Sound3D.h  SoundManager.cpp  SoundManager.h  SoundMode.h  SystemSound.h
resources/: DefaultUILayer.ini  ShippingUILayer.ini  no_name.xml  save.xml  ship.bat  ship2.bat
resources/models/: Capsule.fbx  sphere.fbx
resources/scripts/: Character.lua  Core.lua
resources/shaders/: compileShader.bat  frag.spv  shader.frag
